[gd_scene load_steps=14 format=3 uid="uid://cfqfl0mspjhl3"]

[ext_resource type="Texture2D" uid="uid://cl5irob3klkpq" path="res://Assets/Sprites/icon.svg" id="1_cugle"]
[ext_resource type="Script" path="res://OverWorld/Level/Mobs/over_world_player.gd" id="1_on7e7"]
[ext_resource type="Script" path="res://BattlerStats/battler_stats_res.gd" id="2_kudrg"]
[ext_resource type="Resource" uid="uid://bfw1l3u4gilwr" path="res://BattlerStats/Players/McKinley.tres" id="3_s44bh"]
[ext_resource type="Script" path="res://BattlerStats/Items/item_stats_res.gd" id="4_ccrel"]
[ext_resource type="Resource" uid="uid://cyk0humsgewri" path="res://BattlerStats/Players/Hound.tres" id="4_lrtx4"]
[ext_resource type="Resource" uid="uid://t6cii12jjs4o" path="res://BattlerStats/Items/heal.tres" id="5_aoip2"]
[ext_resource type="PackedScene" uid="uid://b0fwanaepm4y3" path="res://OverWorld/Player/overworld_menu.tscn" id="5_vqbcp"]
[ext_resource type="Resource" uid="uid://c7babmwbaf40c" path="res://BattlerStats/Items/bat.tres" id="6_tjnnl"]
[ext_resource type="Texture2D" uid="uid://dtd25fhkld5vk" path="res://Assets/Sprites/FlashLight.png" id="7_y1hlh"]
[ext_resource type="PackedScene" uid="uid://b08cfcf37hcxe" path="res://OverWorld/Player/text_prompter.tscn" id="10_p4xre"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3no4w"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo0op"]
size = Vector2(10, 10)

[node name="OverWorldPlayer" type="Area2D" groups=["Player"]]
collision_layer = 2
collision_mask = 4
script = ExtResource("1_on7e7")
pc = Array[ExtResource("2_kudrg")]([ExtResource("3_s44bh"), ExtResource("4_lrtx4")])
inv = Array[ExtResource("4_ccrel")]([ExtResource("5_aoip2"), ExtResource("6_tjnnl")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3no4w")

[node name="CollisionRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)

[node name="InteractRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 16)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="Camera2D" type="Camera2D" parent="."]

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="TextPrompter" parent="CanvasLayer" instance=ExtResource("10_p4xre")]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OverworldMenu" parent="CanvasLayer" instance=ExtResource("5_vqbcp")]

[node name="DangerLevelTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Follower1" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wo0op")

[node name="FollowerSprite" type="Sprite2D" parent="Follower1"]
texture = ExtResource("1_cugle")

[node name="Follower2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wo0op")

[node name="FollowerSprite" type="Sprite2D" parent="Follower2"]
texture = ExtResource("1_cugle")

[node name="Icon" type="Sprite2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("7_y1hlh")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DangerLevelTimer" to="." method="_on_danger_level_timer_timeout"]
